--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.3.1",
     "jszip": "^3.1.5",
     "moment": "^2.22.2",
+    "ng-confirm": "^1.1.0",
     "ng-modal": "^1.0.2",
     "ng-multiselect-dropdown": "^0.2.1",
     "ngx-bootstrap": "^3.0.1",
