--- a/backend/.env
+++ b/backend/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=hrm_tis
+DB_DATABASE=hrm_tis_dev
 DB_USERNAME=root
 DB_PASSWORD=
 
